# cph24

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
project/: .coveragerc  .env.example
project/agents/: models.py
project/agents/migrations/: 0001_initial.py
project/agents/tests/: factories.py  test_models.py
project/backend/: __init__.py  config.py  main.py
project/backend/domains/messages/: dependencies.py  models.py  repositories.py  routes.py  services.py
project/backend/tests/: conftest.py
project/backend/tests/domains/messages/: test_repositories.py  test_routes.py  test_services.py
project/config/: settings.py
snippets/: demo_async.py  demo_sync.py
